Update website content and structure

--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "description": "AI Homepage",
   "main": "index.html",
   "scripts": {
-    
     "start": "http-server",
     "deploy": "firebase deploy --only hosting",
+    "build": "your-build-command-here",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector"
-  }
+  "license": "ISC"
 }
